<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#404040"
    android:orientation="vertical"
    tools:context="cs.dawson.myapplication.GameActivity"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/progressTextView"
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:padding="10dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/scoreTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:padding="10dp"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/button0"
                    android:layout_width="142dp"
                    android:layout_height="127dp"
                    android:layout_marginRight="5dp"
                    android:background="@null"
                    android:onClick="chooseAnswer"
                    android:scaleType="fitXY"
                    android:tag="0"
                    app:srcCompat="@drawable/pic_1" />

                <ImageButton
                    android:id="@+id/button1"
                    android:layout_width="142dp"
                    android:layout_height="127dp"
                    android:layout_marginLeft="5dp"
                    android:background="@null"
                    android:onClick="chooseAnswer"
                    android:scaleType="fitXY"
                    android:tag="1"
                    app:srcCompat="@drawable/pic_3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/button2"
                    android:layout_width="142dp"
                    android:layout_height="127dp"
                    android:layout_marginRight="5dp"
                    android:background="@null"
                    android:onClick="chooseAnswer"
                    android:scaleType="fitXY"
                    android:tag="2"
                    app:srcCompat="@drawable/pic_4" />

                <ImageButton
                    android:id="@+id/button3"
                    android:layout_width="142dp"
                    android:layout_height="127dp"
                    android:layout_marginLeft="5dp"
                    android:background="@null"
                    android:onClick="chooseAnswer"
                    android:scaleType="fitXY"
                    android:tag="3"
                    app:srcCompat="@drawable/pic_5" />


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:id="@+id/questionTextView"
                android:layout_width="256dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/question_1_righLaneAhead"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/resultTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-smallcaps"
                android:gravity="center_horizontal"
                android:text="TEST"
                android:textColor="@android:color/black"
                android:textSize="24sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/playAgainButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:onClick="playAgain"
                android:text="@string/playagain" />

            <Button
                android:id="@+id/nextButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:onClick="playAgain"
                android:text="@string/next" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:padding="10dp">

            <Button
                android:id="@+id/hintButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>

